# nn-sparsification-experiments

./: pyproject.toml
src/: main.py  plotter.py
